# pi-controll

./: .gitignore  DS18B20.py  README.md  assets  chicken.py  logger.ini  main.py  pyproject.toml  static
.github/workflows/: deploy.yml  node.js.yml
chickenpi/: DS18B20.py  auth.py  chicken.py  door.py  images.py  lights.py
chickenpi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chickenpi/auth/: auth.py
chickenpi/device/: factory.py
chickenpi/door/: door.py  door_driver.py
chickenpi/image/: image.py
chickenpi/images/: images.py
chickenpi/light/: light.py  light_driver.py
chickenpi/lights/: lights.py  lights_driver.py
chickenpi/logging/: logging.py
chickenpi/temperature/: temperature.py
frontend/chickenpi/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/chickenpi/src/: App.vue  main.ts
frontend/chickenpi/src/components/: ChickenDashboard.vue  DoorCard.vue  ImageCaptureCard.vue  LightCard.vue  SunCalc.vue  TempCard.vue
frontend/chickenpi/src/plugins/: vuetify.js
openapi/: openapi.json
static/: dashboard.html
tests/: test_chicken.py  test_door.py  test_image.py  test_images.py  test_light.py  test_lights.py  test_temperature.py
tests/data/temperature/28-0417a12507ff/: w1_slave
tests/data/temperature/28-0417a142c0ff/: w1_slave
tests/data/temperature_broken/28-0417a12507ff/: w1_slave
tests/data/temperature_broken/28-0417a142c0ff/: w1_slave
