[project]
name = "chickenpi"
version = "0.2.0"
description = "Backend for automating chicken coop with raspberry pi."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "gpiozero>=2.0.1",
    "rich>=14.0.0",
    "rpi-gpio>=0.7.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "toml-cli>=0.8.1",
]
